config-root/namespaces/jx-staging/paul-golang-http/paul-golang-http-paul-golang-http-deploy.yaml
# Source: paul-golang-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paul-golang-http-paul-golang-http
  labels:
    draft: draft-app
    chart: "paul-golang-http-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'paul-golang-http'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: paul-golang-http-paul-golang-http
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: paul-golang-http-paul-golang-http
    spec:
      serviceAccountName: paul-golang-http-paul-golang-http
      containers:
        - name: paul-golang-http
          image: "567235585022.dkr.ecr.us-east-1.amazonaws.com/rackspace-org/paul-golang-http:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
